# rPICO

./: README.md  cmakeheader
project/: CMakeLists.txt
project/1.morse/: CMakeLists.txt  m1.c  m2.c  m3.c  mt.c
project/2.io/: CMakeLists.txt  ascii_cnt_morse  io1.c  io2.c  m1.c
project/3.sort/: CMakeLists.txt  n1.c  n2.c  w1.c  w2.c  w3.c
project/4.m2/: CMakeLists.txt  f1.c  f2.c  f3.c  f4.c  f5.c
project/5.wifi/: CMakeLists.txt
project/5.wifi/access_point/: CMakeLists.txt  ap.c  cp1.c  cp2.c  just_AP.c  station.c
project/5.wifi/station/: CMakeLists.txt  station.c
